GenericSetup Product Changelog

  GenericSetup 1.4 (unreleased)
  
    - Deprecate the version field for import steps.

    - Deprecate reading of version.txt to get the version for a profile.

    - Be more careful in checking context id validity.

    - Fire events before and after importing.

    - Use zcml to register import and export steps.

    - tool: Fixed toolset import handler not to initialize tools again, when
      they already exist in the site.

  GenericSetup 1.3.2 (2007/09/11)

    - Ignore import and export step handlers that we can not resolve.

    - Restore the import context after running steps from a profile
      so we do not break on nested calls.

    - components: Provide log output when purging utilities or adapters.

    - components: Fixed an undefined variable name in a log message.


  GenericSetup 1.3.1 (2007/08/08)

    - components: correct the object path for the site root to be the
      empty string.

    - components: Made output more diff friendly.

    - utils: Added warnings to old code.
      ImportConfiguratorBase and ExportConfiguratorBase will become deprecated
      as soon as GenericSetup itself no longer uses them. HandlerBase is now
      deprecated.

    - components: Added 'components_xmlconfig.html' form.
      This view allows to inspect and edit component registrations. It is also
      available under the ZMI tab 'manage_components'.


  GenericSetup 1.3 (2007/07/26)

    - components: Removed non-functional support for registering objects in
      nested folders. We only support objects available in the component
      registry's parent now. The component registry needs to be either
      acquisition wrapped or have a __parent__ pointer to get to the parent.


  GenericSetup 1.3-beta (2007/07/12)

    - Guard against situations where encoded text may be compared by the
      differ.
      (http://www.zope.org/Collectors/CMF/471)

    - Extend the ZCatalog import/export mechanism to allow removal of 